--- a/树莓派科学上网.md
+++ b/树莓派科学上网.md
@@ -6,7 +6,7 @@ go版本好像功能更全一点，但我没用过go
 
 fork下来折腾了一下，代码有一个bug，改完就可用了，不知道是不是作者故意的。
 
-## 过程当中学到了几点：
+### 过程当中学到了几点：
 ## 关于socks5这个协议
 1. socks5 client需要把ip层的packet都截住，然后发往本地1080端口
   * client由系统（windows可设置socks代理）或软件设置(例如chrome的switchyomega,这个设置起来更灵活，不过只能封装http的数据）。
