--- a/_posts/2018-1-14-树莓派科学上网.md
+++ b/_posts/2018-1-14-树莓派科学上网.md
@@ -1,3 +1,8 @@
+---
+layout: post
+title: 树莓派科学上网
+---
+
 树莓派的pip下载shadowsocks老是报错，本身对树莓派系统也不是很了解
 
 搜索一番后发现有个轻量级的shadowsocks，github上给出了python源码，大概2000行左右，https://github.com/linw1995/lightsocks-python
